# powerai-dashboard

./: app.py  pyproject.toml
.streamlit/: config.toml
attached_assets/: Pasted--Prompt-for-Utility-Company-Preventative-Maintenance-Dashboard-Project-Overview-Create-an-inter-1741554210314.txt  Pasted--Utility-Preventative-Maintenance-System-Total-Equipment-100-High-Risk-Equipment-0-0-0-Average--1741556125569.txt
data/: sample_data.py
utils/: chatbot.py  cost_analysis.py  data_processing.py  map_utils.py  predictions.py  weather_utils.py
